[🐛 Fix] Remove gap cchange on mobile

--- a/sass/components/_header.sass
+++ b/sass/components/_header.sass
@@ -80,6 +80,7 @@ header
 
 @media only screen and (max-width: 800px)
   header
+    flex-wrap: wrap
     #menuIcon
       color: var(--text-color)
       fill: currentColor
@@ -95,8 +96,3 @@ header
 
         &:not(:last-of-type)::after
           content: ""
-
-    flex-wrap: wrap
-
-    *
-      gap: 7px
